IF(NOT "$ENV{CURSES_ROOT}" STREQUAL "")
    set(CURSES_ROOT $ENV{CURSES_ROOT} )
    set(NCurses_LIBRARY ${CURSES_ROOT}/lib )
    set(NCurses_INCLUDE_DIR ${CURSES_ROOT}/include )
    message(STATUS "Setting up Curses library to ${CURSES_ROOT}")
ENDIF()

IF(NOT "$ENV{READLINE_ROOT}" STREQUAL "")
    set(READLINE_ROOT $ENV{READLINE_ROOT} )
    set(Readline_INCLUDE_DIR ${READLINE_ROOT}/include )
    set(Readline_LIBRARY ${READLINE_ROOT}/lib )
    message(STATUS "Setting up Readline library to ${READLINE_ROOT}")
ENDIF()

IF(NOT "$ENV{ZLIB_ROOT}" STREQUAL "")
    set(ZLIB_ROOT_DIR $ENV{ZLIB_ROOT} )
    set(ZLIB_INCLUDE_DIR $ENV{ZLIB_ROOT}/include )
    set(ZLIB_LIBRARIES $ENV{ZLIB_ROOT}/lib )
    set(ZLIB_LIBRARY $ENV{ZLIB_ROOT}/lib )
    message(STATUS "Setting up ZLib library to ${ZLIB_ROOT_DIR}")
ENDIF()

IF(NOT "$ENV{SNAPPY_ROOT}" STREQUAL "")
    set(SNAPPY_ROOT_DIR $ENV{SNAPPY_ROOT} )
    set(SNAPPY_INCLUDE_DIR $ENV{SNAPPY_ROOT}/include )
    set(SNAPPY_LIBRARIES $ENV{SNAPPY_ROOT}/lib )
    set(SNAPPY_LIBRARY $ENV{SNAPPY_ROOT}/lib )
    message(STATUS "Setting up ZLib library to ${SNAPPY_ROOT_DIR}")
ENDIF()

IF(NOT "$ENV{BZIP2_ROOT}" STREQUAL "")
    set(BZIP2_ROOT_DIR $ENV{BZIP2_ROOT} )
    set(BZIP2_INCLUDE_DIR $ENV{BZIP2_ROOT}/include )
    set(BZIP2_LIBRARIES $ENV{BZIP2_ROOT}/lib )
    message(STATUS "Setting up BZip2 library to ${BZIP2_ROOT_DIR}")
ENDIF()

add_subdirectory( fc )
add_subdirectory( vendor )
add_subdirectory( schema )
add_subdirectory( jsonball )
add_subdirectory( appbase )
add_subdirectory( chainbase )
add_subdirectory( chain )
add_subdirectory( protocol )
add_subdirectory( net )
add_subdirectory( utilities )
add_subdirectory( plugins )
add_subdirectory( manifest )
add_subdirectory( wallet )
