IF(NOT "$ENV{CURSES_ROOT}" STREQUAL "")
    set(CURSES_ROOT $ENV{CURSES_ROOT} )
    set(CURSES_DIR $ENV{CURSES_ROOT} )
    set(CURSES_INCLUDE_DIR $ENV{CURSES_ROOT}/include )
    set(CURSES_INCLUDE_PATH $ENV{CURSES_ROOT}/include )
    set(CURSES_LIBRARY $ENV{CURSES_ROOT}/lib/libncurses.a )
    message(STATUS "Setting up Curses library to ${CURSES_ROOT}")
ENDIF()

IF(NOT "$ENV{READLINE_ROOT}" STREQUAL "")
    set(Readline_ROOT_DIR $ENV{READLINE_ROOT} )
    set(Readline_INCLUDE_DIR ${Readline_ROOT_DIR}/include )
    message(STATUS "Setting up Readline library to ${Readline_ROOT_DIR}")
ENDIF()

IF(NOT "$ENV{ZLIB_ROOT}" STREQUAL "")
    set(ZLIB_ROOT_DIR $ENV{ZLIB_ROOT} )
    set(ZLIB_DIR $ENV{ZLIB_ROOT} )
    set(ZLIB_INCLUDE_DIR $ENV{ZLIB_ROOT}/include )
    message(STATUS "Setting up ZLib library to ${ZLIB_ROOT_DIR}")
ENDIF()

IF(NOT "$ENV{SNAPPY_ROOT}" STREQUAL "")
    set(SNAPPY_ROOT_DIR $ENV{SNAPPY_ROOT} )
    set(SNAPPY_DIR $ENV{SNAPPY_ROOT} )
    set(SNAPPY_INCLUDE_DIR $ENV{SNAPPY_ROOT}/include )
    message(STATUS "Setting up Snappy library to ${SNAPPY_ROOT_DIR}")
ENDIF()

IF(NOT "$ENV{BZIP2_ROOT}" STREQUAL "")
    set(BZIP2_ROOT_DIR $ENV{BZIP2_ROOT} )
    set(BZIP2_DIR $ENV{BZIP2_ROOT} )
    set(BZIP2_INCLUDE_DIR $ENV{BZIP2_ROOT}/include )
    message(STATUS "Setting up BZip2 library to ${BZIP2_ROOT_DIR}")
ENDIF()

add_subdirectory( fc )
add_subdirectory( vendor )
add_subdirectory( schema )
add_subdirectory( jsonball )
add_subdirectory( appbase )
add_subdirectory( chainbase )
add_subdirectory( chain )
add_subdirectory( protocol )
add_subdirectory( net )
add_subdirectory( utilities )
add_subdirectory( plugins )
add_subdirectory( manifest )
add_subdirectory( wallet )
